--- a/src/app/admin/admin.less
+++ b/src/app/admin/admin.less
@@ -117,6 +117,13 @@
         color: #999999;
       }
     }
+    .episode-thumbnail {
+      width: 40rem;
+      > .thumbnail-image {
+        width: 100%;
+        height: auto;
+      }
+    }
     .content {
       flex: 1 1 auto;
 
