--- a/src/ng2-semantic/ng2-semantic.less
+++ b/src/ng2-semantic/ng2-semantic.less
@@ -1,3 +1,4 @@
 @import "../assets/semantic-ui-less/semantic.less";
 
 @import "./input/input.less";
+@import "./image-placeholder/ui-image-placeholder.less";
