split episode and episode thumbnail to individual component

--- a/src/app/admin/bangumi-detail/bangumi-detail.html
+++ b/src/app/admin/bangumi-detail/bangumi-detail.html
@@ -2,95 +2,49 @@
   <h1 class="ui header">编辑新番</h1>
 </nav>
 <div class="bangumi-container">
-    <form (ngSubmit)="onSubmit()" class="bangumi-form ui form">
-      <section class="bangumi-info">
-        <div class="bangumi-image">
-          <img src="{{bangumi.image}}" alt="image">
+  <form (ngSubmit)="onSubmit()" class="bangumi-form ui form ui dimmable" [ngClass]="{dimmed: !bangumi.bgm_id}">
+    <div class="ui simple inverted dimmer">
+      <div class="ui loader"></div>
+    </div>
+    <section class="bangumi-info">
+      <div class="bangumi-image">
+        <img src="{{bangumi.image}}" alt="image">
+      </div>
+      <div class="bangumi-basic-info">
+        <div class="field">
+          <label>番组名</label>
+          <input type="text" [(ngModel)]="bangumi.name"/>
         </div>
-        <div class="bangumi-basic-info">
-          <div class="field">
-            <label>番组名</label>
-            <input type="text" [(ngModel)]="bangumi.name"/>
-          </div>
-          <div class="field">
-            <label>中文名</label>
-            <input type="text" [(ngModel)]="bangumi.name_cn"/>
-          </div>
-          <div class="field">
-            <label>放送开始</label>
-            <input type="text" [(ngModel)]="bangumi.air_date"/>
-          </div>
-          <div class="field">
-            <label>放送星期</label>
-            <input type="text" [(ngModel)]="bangumi.air_weekday"/>
-          </div>
-          <div class="field">
-            <label>RSS</label>
-            <input type="text" [(ngModel)]="bangumi.rss"/>
-          </div>
-          <div class="field">
-            <label>正则表达式(用于匹配番组名称以及话数)</label>
-            <input type="text" [(ngModel)]="bangumi.eps_regex"/>
-          </div>
+        <div class="field">
+          <label>中文名</label>
+          <input type="text" [(ngModel)]="bangumi.name_cn"/>
         </div>
-      </section>
-      <button class="ui right floated primary button" type="submit">Save</button>
+        <div class="field">
+          <label>放送开始</label>
+          <input type="text" [(ngModel)]="bangumi.air_date"/>
+        </div>
+        <div class="field">
+          <label>放送星期</label>
+          <input type="text" [(ngModel)]="bangumi.air_weekday"/>
+        </div>
+        <div class="field">
+          <label>RSS</label>
+          <input type="text" [(ngModel)]="bangumi.rss"/>
+        </div>
+        <div class="field">
+          <label>正则表达式(用于匹配番组名称以及话数)</label>
+          <input type="text" [(ngModel)]="bangumi.eps_regex"/>
+        </div>
+      </div>
+    </section>
+    <button class="ui right floated primary button" [ngClass]="{loading: isSavingBangumi}" type="submit">Save</button>
   </form>
   <div class="bangumi-episodes" *ngIf="bangumi.id">
     <h4 class="ui header">各话列表</h4>
     <div class="ui divider"></div>
     <div class="episode-list">
-      <div class="episode-item ui segment" *ngFor="#episode of bangumi.episodes">
-        <div class="episode-no-wrapper">
-          <h1 class="episode-no"><span>#</span>{{episode.episode_no}}</h1>
-        </div>
-        <ui-dimmer class="episode-thumbnail">
-          <ui-image-placeholder [imageUrl]="episode.thumbnail" class="thumbnail-image ui-dimmer-content">
-            <div class="ui-image-fallback">
-              <h4 class="ui icon film">
-                <i class="film icon"></i>
-              </h4>
-            </div>
-          </ui-image-placeholder>
-          <!--<img [src]="episode.thumbnail" alt="no image" class="thumbnail-image ui-dimmer-content">-->
-          <div class="ui simple dimmer">
-            <div class="content">
-              <div class="center">
-                <h4 class="ui inverted icon edit edit-button" (click)="editThumbnail()">
-                  <i class="edit icon"></i>
-                  修改预览图
-                </h4>
-              </div>
-            </div>
-          </div>
-        </ui-dimmer>
-        <div class="content">
-          <form class="ui form" (ngSubmit)="updateEpisode(episode)">
-            <div class="field">
-              <label>标题</label>
-              <div class="two fields">
-                <div class="field">
-                  <input type="text" placeholder="标题" [(ngModel)]="episode.name">
-                </div>
-                <div class="field">
-                  <input type="text" placeholder="中文标题" [(ngModel)]="episode.name_cn">
-                </div>
-              </div>
-            </div>
-            <div class="fields">
-              <div class="four wide field">
-                <label>放送日期(YYYY-MM-DD)</label>
-                <input type="text" placeholder="放送日期" [(ngModel)]="episode.airdate">
-              </div>
-              <div class="four wide field">
-                <label>时长(HH:mm:dd)</label>
-                <input type="text" placeholder="时长" [(ngModel)]="episode.duration">
-              </div>
-            </div>
-            <button class="ui primary button right-aligned" type="submit">Save</button>
-          </form>
-        </div>
-      </div>
+      <episode-detail class="episode-item ui segment" [episode]="episode" *ngFor="#episode of bangumi.episodes">
+      </episode-detail>
     </div>
   </div>
 </div>
