add play-episode, player component

--- a/src/app/admin/bangumi-detail/episode-thumbnail/episode-thumbnail.html
+++ b/src/app/admin/bangumi-detail/episode-thumbnail/episode-thumbnail.html
@@ -1,9 +1,9 @@
 <ui-dimmer *ngIf="!editorOpen">
   <ui-image-placeholder [imageUrl]="episode.thumbnail" class="thumbnail-image ui-dimmer-content">
     <div class="ui-image-fallback">
-      <h4 class="ui icon film">
+      <div class="ui icon film">
         <i class="film icon"></i>
-      </h4>
+      </div>
     </div>
   </ui-image-placeholder>
   <!--<img [src]="episode.thumbnail" alt="no image" class="thumbnail-image ui-dimmer-content">-->
