--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -5,3 +5,22 @@
 .home-content {
   margin-top: 2rem;
 }
+
+.episode-card {
+  ui-image-placeholder {
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+    position: relative;
+    .image-wrapper {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+    .icon-holder {
+      font-size: 2rem;
+    }
+  }
+}
