add type property

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -4,7 +4,7 @@
       <div class="item">
         <h2>{{siteTitle}}</h2>
       </div>
-      <a class="item">Home</a>
+      <a class="item" [routerLink]="['Home', 'Default']">Home</a>
       <a href="" class="item">Something</a>
     </div>
   </div>
