--- a/src/app/home/player/player.html
+++ b/src/app/home/player/player.html
@@ -1,5 +1,5 @@
 <figure class="videoContainer">
   <video [poster]="episode.thumbnail" [id]="playerId">
-    <source [src]="videoUrl">
+    <source [src]="videoUrl" [type]="videoType">
   </video>
 </figure>
