--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -1,4 +1,6 @@
 @import "./player/player.less";
+@import "./bangumi-detail/bangumi-detail.less";
+
 .navbar {
 
 }
@@ -12,6 +14,25 @@
     width: 100%;
     height: 0;
     padding-bottom: 56.25%;
+    position: relative;
+    .image-wrapper {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+    .icon-holder {
+      font-size: 2rem;
+    }
+  }
+}
+
+.bangumi-card {
+  ui-image-placeholder {
+    width: 100%;
+    height: 0;
+    padding-bottom: 140.5152224824%;
     position: relative;
     .image-wrapper {
       position: absolute;
