--- a/src/app/home/player/player.less
+++ b/src/app/home/player/player.less
@@ -17,6 +17,11 @@
     height: 4rem;
     padding: 0.5rem;
     z-index: 100;
+    opacity: 0;
+    transition: opacity 0.3s linear;
+    &.show {
+      opacity: 1;
+    }
     > .controls-wrapper {
       width: 100%;
       height: 100%;
@@ -47,13 +52,26 @@
         margin-left: 0.4rem;
         margin-right: 0.4rem;
         position: relative;
-        > .progress-fill {
-          height: 100%;
+        padding: 1px;
+        > .play-progress-fill {
           width: 0;
+          height: 100%;
           background-color: #93b4d1;
+          position: relative;
+          z-index: 110;
+        }
+        > .load-progress {
           position: absolute;
-          top: 0;
-          left: 0;
+          top: 1px;
+          left: 1px;
+          right: 1px;
+          bottom: 1px;
+          z-index: 102;
+          > .load-progress-fill {
+            width: 0;
+            background-color: #cccccc;
+            height: 100%;
+          }
         }
       }
     }
