add click and drag progress bar, add fullscreen toggle. add an incompleted slider component

--- a/src/app/home/player/player.less
+++ b/src/app/home/player/player.less
@@ -53,10 +53,11 @@
         margin-right: 0.4rem;
         position: relative;
         padding: 1px;
+        cursor: pointer;
         > .play-progress-fill {
           width: 0;
           height: 100%;
-          background-color: #93b4d1;
+          background-color: #5ca2d1;
           position: relative;
           z-index: 110;
         }
@@ -69,7 +70,7 @@
           z-index: 102;
           > .load-progress-fill {
             width: 0;
-            background-color: #cccccc;
+            background-color: rgba(256, 256, 256, 0.2);
             height: 100%;
           }
         }
