--- a/src/app/home/player/player.html
+++ b/src/app/home/player/player.html
@@ -1,5 +1,5 @@
 <figure class="video-container" [style.width]="containerWidth" [style.height]="containerHeight" (mousemove)="onMousemove()">
-  <video #video [poster]="episode.thumbnail" [id]="playerId" (timeupdate)="onTimeUpdate()">
+  <video #video [poster]="episode.thumbnail" [id]="playerId" (timeupdate)="onTimeUpdate()" (progress)="onChunkLoad()">
     <source [src]="videoUrl" [type]="videoType">
   </video>
   <div class="video-controls" [ngClass]="{show: showControl}">
@@ -7,16 +7,16 @@
       <button class="play-button control-button" (click)="onClickPlay()">
         <i class="icon" [ngClass]="playButtonIcon"></i>
       </button>
-      <div class="play-progress">
+      <div #slider class="play-progress" (mousedown)="onDragSlider($event)" (click)="onClickSlider($event)">
         <div class="play-progress-fill" [style.width]="playProgress"></div>
         <div class="load-progress">
-          <div class="load-progress-fill"></div>
+          <div class="load-progress-fill" [style.width]="bufferedProgress"></div>
         </div>
       </div>
       <button class="volume-button control-button">
         <i class="icon volume up"></i>
       </button>
-      <button class="fullscreen-button control-button">
+      <button class="fullscreen-button control-button" (click)="toggleFullscreen()">
         <i class="icon maximize"></i>
       </button>
     </div>
