--- a/src/app/home/player/player.html
+++ b/src/app/home/player/player.html
@@ -1,4 +1,4 @@
-<figure #videoContainer class="video-container" [style.width]="containerWidth" [style.height]="containerHeight" (mouseenter)="onEnterContainer()">
+<figure #videoContainer class="video-container" (mouseenter)="onEnterContainer()">
   <video #video
          preload="metadata"
          class="ng2-video"
