--- a/src/app/home/player/player.less
+++ b/src/app/home/player/player.less
@@ -1,6 +1,11 @@
 .video-container {
   margin: 0;
   position: relative;
+  width: 100%;
+  height: 100%;
+  //transition: width 0.3s linear, height 0.3s linear;
+  background-color: #000;
+
   > video {
     display: block;
     width: 100%;
