add a communication mechanism between home and its children. Sidebar of home will either take space or overlapped depends on its children type or viewport width

--- a/src/app/admin/admin.html
+++ b/src/app/admin/admin.html
@@ -1,5 +1,6 @@
 <div class="admin-container">
   <aside class="ui left inverted vertical sidebar fixed menu visible">
+    <a class="item" [routerLink]="['Home', 'Default']">Home</a>
     <a class="item" [routerLink]="['ListBangumi']">
       已添加的新番
     </a>
