add some new stuff in play-episode. change the dimension control in player

--- a/src/app/home/bangumi-detail/bangumi-detail.html
+++ b/src/app/home/bangumi-detail/bangumi-detail.html
@@ -1,4 +1,4 @@
-<div class="ui container">
+<div class="ui container bangumi-default-container">
   <div class="bangumi-info">
     <div class="bangumi-cover">
       <ui-image-placeholder [imageUrl]="bangumi.image">
