--- a/src/app/home/default/default.html
+++ b/src/app/home/default/default.html
@@ -1,4 +1,4 @@
-<div class="ui container">
+<div class="ui container default-container">
   <h4>最近更新</h4>
   <div class="ui divider"></div>
   <div class="ui five doubling cards">
