--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -1,3 +1,5 @@
+@import "./default/default.less";
+@import "./play-episode/play-episode.less";
 @import "./player/player.less";
 @import "./bangumi-detail/bangumi-detail.less";
 
@@ -39,7 +41,7 @@
 }
 
 .home-content {
-  margin-top: (2rem + 3.5rem);
+  margin-top: 3.5rem;
 
   &.Default.sidebar-active,
   &.Bangumi.sidebar-active {
