--- a/src/app/home/play-episode/play-episode.html
+++ b/src/app/home/play-episode/play-episode.html
@@ -1,8 +1,33 @@
-<div class="ui container" *ngIf="episode">
+<div class="theater-backdrop" *ngIf="episode">
+  <player [episode]="episode"></player>
+</div>
+<div class="ui container episode-info-container" *ngIf="episode">
   <h3>
     <span class="bangumi-name">{{episode.bangumi.name_cn}}</span>
     <span class="episode-no">{{episode.episode_no}}</span>
   </h3>
-  <div class="ui divider"></div>
-  <player [episode]="episode"></player>
+  <div class="ui divider">
+  </div>
+  <div class="bangumi-info ui grid">
+    <div class="three wide column">
+      <ui-image-placeholder [imageUrl]="episode.bangumi.image">
+        <div class="ui-image-fallback">
+          <h4 class="ui icon film icon-holder">
+            <i class="film icon"></i>
+          </h4>
+        </div>
+      </ui-image-placeholder>
+    </div>
+    <div class="thirteen wide column">
+      <h2 class="bangumi-title">
+        <span class="name-cn">{{episode.bangumi.name_cn}}</span>
+        <span class="name">{{episode.bangumi.name}}</span>
+      </h2>
+      <div class="summary">
+        {{episode.bangumi.summary}}
+      </div>
+    </div>
+  </div>
 </div>
+
+
