--- a/src/app/home/bangumi-list/bangumi-list.less
+++ b/src/app/home/bangumi-list/bangumi-list.less
@@ -12,7 +12,10 @@
   }
 }
 
-.bangumi-list-pagination {
+.load-more-indicator {
   margin-top: 2rem;
   margin-bottom: 3rem;
+  .button.hide {
+    visibility: hidden;
+  }
 }
