fix the sidebar click issues

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
-  <a class="sidebar-toggle" (click)="toggleSidebar()">
+  <a class="sidebar-toggle" (click)="toggleSidebar($event)">
     <i class="icon sidebar"></i>
   </a>
   <a class="brand" [routerLink]="['Home', 'Default']">
