change bangumi cover image url to bangumi.cover. if you see a broken image, using tools.py of Albireo to download your bangumi cover fix #7

--- a/src/app/admin/bangumi-detail/bangumi-detail.html
+++ b/src/app/admin/bangumi-detail/bangumi-detail.html
@@ -8,7 +8,7 @@
     </div>
     <section class="bangumi-info">
       <div class="bangumi-image">
-        <img src="{{bangumi.image}}" alt="image">
+        <img src="{{bangumi.cover}}" alt="image">
       </div>
       <div class="bangumi-basic-info">
         <div class="field">
