--- a/src/app/home/bangumi-detail/bangumi-detail.html
+++ b/src/app/home/bangumi-detail/bangumi-detail.html
@@ -1,7 +1,7 @@
 <div class="ui container bangumi-default-container">
   <div class="bangumi-info">
     <div class="bangumi-cover">
-      <ui-image-placeholder [imageUrl]="bangumi.image">
+      <ui-image-placeholder [imageUrl]="bangumi.cover">
         <div class="ui-image-fallback">
           <h4 class="ui icon film icon-holder">
             <i class="film icon"></i>
