--- a/src/app/home/play-episode/play-episode.html
+++ b/src/app/home/play-episode/play-episode.html
@@ -10,7 +10,7 @@
   </div>
   <div class="bangumi-info ui grid">
     <div class="three wide column">
-      <ui-image-placeholder [imageUrl]="episode.bangumi.image">
+      <ui-image-placeholder [imageUrl]="episode.bangumi.cover">
         <div class="ui-image-fallback">
           <h4 class="ui icon film icon-holder">
             <i class="film icon"></i>
