fix bug when add new bangumi, bangumi.cover is unavailable. the image will missing

--- a/src/app/admin/bangumi-detail/bangumi-detail.html
+++ b/src/app/admin/bangumi-detail/bangumi-detail.html
@@ -8,7 +8,7 @@
     </div>
     <section class="bangumi-info">
       <div class="bangumi-image">
-        <img src="{{bangumi.cover}}" alt="image">
+        <img src="{{bangumi.cover || bangumi.image}}" alt="image">
       </div>
       <div class="bangumi-basic-info">
         <div class="field">
