--- a/src/app/home/bangumi-list/bangumi-list.html
+++ b/src/app/home/bangumi-list/bangumi-list.html
@@ -12,7 +12,7 @@
     <div class="thirteen wide column bangumi-info">
       <h3 class="bangumi-title">
         <span class="name-cn">{{bangumi.name_cn}}</span>
-        <span class="name"><{{bangumi.name}}</span>
+        <span class="name">{{bangumi.name}}</span>
       </h3>
       <div class="summary">{{bangumi.summary}}</div>
       <p class="air-date">
