add pagination, and fix #9

--- a/src/app/admin/list-bangumi/list-bangumi.html
+++ b/src/app/admin/list-bangumi/list-bangumi.html
@@ -1,43 +1,50 @@
 <nav class="nav-admin">
   <h1 class="ui header">已保存的新番</h1>
 </nav>
-<div class="bangumi-container">
-  <div class="ui loading search">
-    <div class="ui fluid icon input">
-      <input class="prompt" type="text" placeholder="按名称过滤" #searchBox (keyup.enter)="filterBangumi()" [name]="searchBox.value">
-      <i class="search icon"></i>
-    </div>
-  </div>
-  <div class="bangumi-list">
-    <div *ngFor="let bangumi of bangumiList" (click)="editBangumi(bangumi)" class="ui segment bangumi-list-item">
-      <img [src]="bangumi.cover" alt="image" class="bangumi-image">
-      <div class="md-list-item-text">
-        <h3 class="bangumi-title">{{bangumi.name_cn}}</h3>
-        <h4 class="entry">
-          <span class="entry-key">日文名</span>
-          <span class="entry-value">{{bangumi.name}}</span>
-        </h4>
-        <p class="entry">
-          <span class="entry-key">简介</span>
-          <span class="entry-value">{{bangumi.summary}}</span>
-        </p>
-        <p class="entry">
-          <span class="entry-key">放送开始</span>
-          <span class="entry-value">{{bangumi.air_date}}</span>
-        </p>
-        <p class="entry">
-          <span class="entry-key">放送星期</span>
-          <span class="entry-value">{{bangumi.air_weekday}}</span>
-        </p>
-        <p class="entry">
-          <span class="entry-key">RSS</span>
-          <span class="entry-value">{{bangumi.rss}}</span>
-        </p>
-        <p class="entry">
-          <span class="entry-key">正则表达式</span>
-          <span class="entry-value">{{bangumi.eps_regex}}</span>
-        </p>
+<div class="bangumi-container ui one column grid">
+  <div class="column">
+    <div class="ui search" [ngClass]="{loading: isLoading}">
+      <div class="ui fluid icon input">
+        <input class="prompt" type="text" placeholder="按名称过滤" #searchBox (keyup)="filterBangumi(searchBox.value)">
+        <i class="search icon"></i>
       </div>
     </div>
+  </div>
+  <div class="column">
+    <div class="bangumi-list">
+      <div *ngFor="let bangumi of bangumiList" (click)="editBangumi(bangumi)" class="ui segment bangumi-list-item">
+        <img [src]="bangumi.cover" alt="image" class="bangumi-image">
+        <div class="md-list-item-text">
+          <h3 class="bangumi-title">{{bangumi.name_cn}}</h3>
+          <h4 class="entry">
+            <span class="entry-key">日文名</span>
+            <span class="entry-value">{{bangumi.name}}</span>
+          </h4>
+          <p class="entry">
+            <span class="entry-key">简介</span>
+            <span class="entry-value">{{bangumi.summary}}</span>
+          </p>
+          <p class="entry">
+            <span class="entry-key">放送开始</span>
+            <span class="entry-value">{{bangumi.air_date}}</span>
+          </p>
+          <p class="entry">
+            <span class="entry-key">放送星期</span>
+            <span class="entry-value">{{bangumi.air_weekday}}</span>
+          </p>
+          <p class="entry">
+            <span class="entry-key">RSS</span>
+            <span class="entry-value">{{bangumi.rss}}</span>
+          </p>
+          <p class="entry">
+            <span class="entry-key">正则表达式</span>
+            <span class="entry-value">{{bangumi.eps_regex}}</span>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="column center ui centered grid">
+    <ui-pagination [currentPage]="currentPage" [total]="total" [countPerPage]="numberPerPage" (pageChange)="onPageChange($event)"></ui-pagination>
   </div>
 </div>
