--- a/src/app/home/play-episode/play-episode.less
+++ b/src/app/home/play-episode/play-episode.less
@@ -5,6 +5,18 @@
   align-items: stretch;
   width: 100%;
   background-color: #000;
+
+  player {
+    width: auto;
+    height: auto;
+  }
+
+  @media (min-width: 1280px) and (min-height: 800px) {
+    player {
+      width: 1280px;
+      height: 720px;
+    }
+  }
 }
 
 .episode-info-container {
