--- a/src/app/home/player/player.less
+++ b/src/app/home/player/player.less
@@ -6,6 +6,10 @@
   //transition: width 0.3s linear, height 0.3s linear;
   background-color: #000;
 
+  &.hide-cursor {
+    cursor: none;
+  }
+
   > video {
     display: block;
     width: 100%;
