--- a/src/app/home/play-episode/play-episode.less
+++ b/src/app/home/play-episode/play-episode.less
@@ -7,8 +7,10 @@
   background-color: #000;
 
   player {
-    width: auto;
-    height: auto;
+    display: block;
+    width: 100%;
+    height: 100%;
+    flex: 0 1 auto;
   }
 
   @media (min-width: 1280px) and (min-height: 800px) {
