Add permission validate on home menu. add episode list on play-episode

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -9,7 +9,7 @@
 <div class="ui sidebar ui vertical menu home-sidebar" [ngClass]="{visible: sidebarActive}">
   <a class="item" [routerLink]="['Home', 'Default']">Home</a>
   <a class="item" [routerLink]="['Home', 'BangumiList']">所有番组</a>
-  <a class="item" [routerLink]="['Admin', 'ListBangumi']">Management</a>
+  <a class="item" [routerLink]="['Admin', 'ListBangumi']" *ngIf="user && user.level >= 2">Management</a>
 </div>
 <div class="home-content" [ngClass]="currentRouteName + (sidebarActive ? ' sidebar-active': '')">
   <router-outlet></router-outlet>
