--- a/src/app/home/play-episode/play-episode.less
+++ b/src/app/home/play-episode/play-episode.less
@@ -23,11 +23,27 @@
 
 .episode-info-container {
   margin-top: 2rem;
+
+  .episode-title {
+    .episode-name-cn {
+      padding-left: 1em;
+      font-size: 0.8em;
+      color: lighten(#000, 50%);
+    }
+  }
+
   .bangumi-title {
     .name {
       padding-left: 1em;
       font-size: 0.8em;
       color: #696969;
+    }
+  }
+
+  .episode-list {
+    .episode-link {
+      display: block;
+      text-align: center;
     }
   }
 }
